[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/night guy.png" type="Texture" id=1]
[ext_resource path="res://Lightsource.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/gradient.png" type="Texture" id=3]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/landsound.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/ambiebt.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/beyond2.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/death.wav" type="AudioStream" id=8]
[ext_resource path="res://Player.gd" type="Script" id=10]


[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "land"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "running"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.0568, 23.0459 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 24 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 10 )
light_scene = ExtResource( 2 )
lightsourcespawn_path = NodePath("lightsourcespawn")

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/jump = SubResource( 2 )
anims/land = SubResource( 3 )
anims/running = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.44318, 17.0459 )
shape = SubResource( 5 )

[node name="lightsourcespawn" type="Position2D" parent="."]
position = Vector2( 0, 15 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
shadow_enabled = true
shadow_gradient_length = 10.0

[node name="Detected" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detected"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="KeyBox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="KeyBox"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="DoorBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorBox"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="KillBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2( 0, 8 )
shape = SubResource( 6 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
attenuation = 0.267943

[node name="LandSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="distantMonster" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 0.75

[node name="distantMonsterTimer" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="area_entered" from="KeyBox" to="." method="_on_KeyBox_area_entered"]
[connection signal="area_entered" from="DoorBox" to="." method="_on_DoorBox_area_entered"]
[connection signal="area_entered" from="DoorBox" to="." method="_on_KeyBox_area_entered"]
[connection signal="area_entered" from="KillBox" to="." method="_on_KillBox_area_entered"]
[connection signal="area_entered" from="KillBox" to="." method="_on_KeyBox_area_entered"]
[connection signal="timeout" from="distantMonsterTimer" to="." method="_on_distantMonsterTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
